--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <div class="col harf">
         <h2>NEWS</h2>
                   <p>2019/6/1 クマの花火</p>
-
-        <p>2019/7/1 どなたでも参加可能！オープンゼミ 〜Gitを使ってみよう〜</p>
+                  <p>2019/6/2 クマの花火2</p>
+          <p>2019/7/1 どなたでも参加可能！オープンゼミ 〜Gitを使ってみよう〜</p>
         <p>2019/8/10 ゼミ合宿</p>
       </div>
     </div>
